2011-11-13  Christopher Faylor  <me.cygwin2011@cgf.cx>

	Remove erroneously checked-in debugging statements.
	* cygheap.cc (cygheap_fixup_in_child): Here.
	* debug.cc (delete_handle): Here.
	* sigproc.cc (child_info_spawn::cleanup): Here.
	* spawn.cc (child_info_spawn::worker): Here.

2011-11-13  Christopher Faylor  <me.cygwin2011@cgf.cx>

	Throughout, change "sig %d" in strace output to "signal %d" for
	consistency.
	* assert.cc (__assert_func): Output assertion string to strace too.
	* fork.cc (frok::parent): Report ASAP on forked pid in debugging output.
	* pinfo.cc (pinfo::_pinfo_release): Define new function.
	(pinfo::init): Use _pinfo_release() rather than release() to release
	shared memory stuff.
	(pinfo::wait): Shorten name of process waiting thread for more concise
	debugging.
	(pinfo::release): Use pinfo_release to release shared memory part of
	struct.
	* pinfo.h (pinfo::__pinfo_release): Declare.

2011-11-10  Christopher Faylor  <me.cygwin2011@cgf.cx>

	Throughout use "have_execed" macro rather than "hExeced" global handle.
	Throughout rename _PROC_* to _CH_*.
	* child_info.h: Include "pinfo.h".
	(child_info_types): Rename _PROC_* -> _CH_* to avoid confusion with
	similarly named constants.
	(_PROC_*): Delete unneeded aliases.
	(PROC_*): Ditto.
	(CURR_CHILD_INFO_MAGIC): Ditto.
	(cchildren): Define using "pinfo_minimal".
	(child_info::set_saw_ctrl_c): Move to
	(child_info_spawn::set_saw_ctrl_c): Here.
	(child_info_spawn::lock): New field.
	(child_info_spawn::hExeced): Ditto.
	(child_info_spawn::ev): Ditto.
	(child_info_spawn::~child_info_spawn): Move to sigproc.cc.
	(child_info_spawn::child_info_spawn): Ditto.
	(child_info_spawn::cleanup): Declare new function.
	(child_info_spawn::set_saw_ctrl_c): Move to this class.  Set flag only
	when execed and return true when we have set the flag.
	(child_info_spawn::child_info_spawn::signal_myself_exited): New function.
	(child_info_spawn::wait_for_myself): Ditto.
	(child_info_spawn::has_execed_cygwin): Ditto.